--- a/package.json
+++ b/package.json
@@ -1,54 +1,69 @@
 {
-  "name": "fafresh-frontend",
+  "name": "fafresh-fashion",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@google-cloud/local-auth": "^2.1.0",
+    "@auth/prisma-adapter": "^2.10.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@prisma/client": "^6.11.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.6.7",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clicksend": "^5.0.79",
     "clsx": "^2.1.0",
+    "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.1",
-    "googleapis": "^105.0.0",
+    "googleapis": "^150.0.1",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "node-telegram-bot-api": "^0.64.0",
+    "nodemailer": "^6.10.1",
+    "prisma": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "^20.11.19",
-    "@types/node-telegram-bot-api": "^0.64.2",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.11.16",
+    "@types/node-telegram-bot-api": "^0.64.9",
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
-} 
+}
