--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fafresh-frontend",
+  "name": "fafresh-fashion",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,46 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google-cloud/local-auth": "^2.1.0",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "axios": "^1.6.7",
-    "class-variance-authority": "^0.7.0",
-    "clicksend": "^5.0.79",
-    "clsx": "^2.1.0",
-    "google-spreadsheet": "^4.1.1",
-    "googleapis": "^105.0.0",
-    "lucide-react": "^0.323.0",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^5.18.0",
+    "@mui/material": "^5.18.0",
     "next": "14.1.0",
-    "next-auth": "^4.24.5",
-    "node-telegram-bot-api": "^0.64.0",
+    "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-query": "^3.39.3",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.0"
+    "react-hot-toast": "^2.5.2",
+    "react-player": "^2.14.1"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.11.19",
-    "@types/node-telegram-bot-api": "^0.64.2",
-    "@types/react": "^18.2.55",
+    "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.3.3"
   }
-} 
+}
