--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^5.18.0",
+    "@mui/material": "^5.18.0",
     "@prisma/client": "^6.11.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tailwindcss/forms": "^0.5.7",
+    "@sendgrid/mail": "^8.1.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.6.7",
@@ -29,41 +31,46 @@
     "class-variance-authority": "^0.7.0",
     "clicksend": "^5.0.79",
     "clsx": "^2.1.0",
+    "dotenv": "^17.1.0",
+    "framer-motion": "^11.0.5",
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.1",
     "googleapis": "^150.0.1",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
-    "next-auth": "^4.24.5",
+    "next-auth": "^4.24.11",
     "node-telegram-bot-api": "^0.64.0",
     "nodemailer": "^6.10.1",
     "prisma": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.4.1",
+    "react-player": "^2.16.0",
     "react-query": "^3.39.3",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
+    "react-scroll": "^1.9.3",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.19.6",
     "@types/node-telegram-bot-api": "^0.64.9",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
+    "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.3.3"
   }
 }
