--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@aws-sdk/client-s3": "^3.848.0",
+    "@aws-sdk/s3-request-presigner": "^3.848.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.18.0",
@@ -24,8 +26,12 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@sendgrid/mail": "^8.1.5",
+    "@sentry/nextjs": "^9.40.0",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.5.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^6.4.17",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.6.7",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
@@ -44,11 +50,15 @@
     "prisma": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.4.1",
     "react-player": "^2.16.0",
     "react-query": "^3.39.3",
     "react-scroll": "^1.9.3",
+    "stripe": "^18.3.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
@@ -69,8 +79,10 @@
     "eslint-config-next": "14.1.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
+    "msw": "^2.10.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.3.3"
   }
 }
