--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.18.0",
     "@mui/material": "^5.18.0",
+    "@prisma/client": "^6.12.0",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
