--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
